--- a/src/Pages/Edit/EditP.scss
+++ b/src/Pages/Edit/EditP.scss
@@ -1,38 +1,28 @@
+$card-display-size: 0.6;
+
 .edit {
   display: flex;
+  gap: 10px;
+  padding: 10px 20px;
   &--content {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
-    padding: 10px 20px;
-    &--item {
+    &--buttons {
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 10px;
-      label {
-        font-weight: 700;
-        white-space: nowrap;
-      }
-      input, textarea {
-        width: 100%;
-      }
-      &--array {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        &--item {
-          display: flex;
-          gap: 5px;
-          input {
-            width: 100%;
-          }
-        }
-      }
     }
   }
   &--card {
-
+    width: calc(745px * $card-display-size);
+    height: calc(1045px * $card-display-size);
+    flex-shrink: 0;
+    &--shrink {
+      transform: scale($card-display-size);
+      transform-origin: top left;
+    }
   }
 }
