--- a/src/Pages/Home/HomeP.scss
+++ b/src/Pages/Home/HomeP.scss
@@ -1,3 +1,5 @@
+$card-display-size: 0.4;
+
 .home {
   display: flex;
   flex-direction: column;
@@ -12,5 +14,19 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+  }
+  &--cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    &--card {
+      width: calc(745px * $card-display-size);
+      height: calc(1045px * $card-display-size);
+      flex-shrink: 0;
+      &--shrink {
+        transform: scale($card-display-size);
+        transform-origin: top left;
+      }
+    }
   }
 }
