--- a/src/Components/Card/CardC.scss
+++ b/src/Components/Card/CardC.scss
@@ -28,6 +28,8 @@ $card-border-width: calc(($card-width - $card-content-width) / 2);
   height: $card-height;
   background-color: #000;
   border-radius: calc(5 * $card-border-width / 6);
+  box-shadow: 1px 1px 10px #aaa;
+  overflow: hidden;
   &.printing {
     border-radius: unset;
   }
@@ -44,6 +46,18 @@ $card-border-width: calc(($card-width - $card-content-width) / 2);
     background-position: center;
     background-size: cover;
     box-sizing: border-box;
+  }
+  &.black-border {}
+  &.white-border {
+    background-color: #fff;
+  }
+  &.borderless-border {
+    background-color: #fff;
+    .card--content {
+      width: 100%;
+      height: 100%;
+      padding: calc(($card-height - $card-content-height) / 2 + 15px) calc(($card-width - $card-content-width) / 2 + 15px);
+    }
   }
 }
 
