--- a/src/Components/CardLine/CardLineC.scss
+++ b/src/Components/CardLine/CardLineC.scss
@@ -51,6 +51,10 @@
   &--set {
     width: 160px;
   }
+  &--illustration {
+    width: 200px;
+    font-size: .75rem!important;
+  }
   &:hover {
     background-color: #eee;
   }
