--- a/src/Pages/Home/HomeP.scss
+++ b/src/Pages/Home/HomeP.scss
@@ -5,6 +5,7 @@ $card-small-display-size: .5;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding: 10px 20px;
   &--header {
     display: flex;
     align-items: center;
