--- a/src/Pages/Print/PrintP.scss
+++ b/src/Pages/Print/PrintP.scss
@@ -3,6 +3,12 @@
   flex-direction: column;
   gap: 10px;
   padding: 10px 20px;
+  &--information {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
   &--printing-cards {
     display: flex;
     flex-direction: column;
@@ -10,6 +16,10 @@
       display: flex;
       justify-content: center;
       gap: 20px;
+      input {
+        width: 50px;
+        text-align: center;
+      }
     }
   }
   &--filters {
