--- a/src/Pages/Sets/SetsP.scss
+++ b/src/Pages/Sets/SetsP.scss
@@ -1,1 +1,27 @@
-.sets {}
+.sets {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px 20px;
+  &--header {
+    display: flex;
+    justify-content: center;
+  }
+  &--content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    &--set {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      &--icons {
+        display: flex;
+        &--icon {
+          max-height: 36px;
+        }
+      }
+    }
+  }
+}
