Added dimensions to edit card page

--- a/src/Pages/Edit/EditP.scss
+++ b/src/Pages/Edit/EditP.scss
@@ -37,5 +37,10 @@ $card-small-display-size: .6;
         }
       }
     }
+    &--buttons {
+      display: flex;
+      justify-content: center;
+      gap: 5px;
+    }
   }
 }
