--- a/src/index.scss
+++ b/src/index.scss
@@ -19,11 +19,12 @@ h3 {
 
 .inline-icon {
   display: inline-block;
-  width: 26px;
-  height: 26px;
+  width: 28px;
+  height: 28px;
   background-size: contain;
   border-radius: 50%;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  vertical-align: -3px;
   &.icon--W { background-image: url(/../public/images/symbols/W.png); }
   &.icon--U { background-image: url(/../public/images/symbols/U.png); }
   &.icon--B { background-image: url(/../public/images/symbols/B.png); }
